Endret Nabla-logoen i navbaren fra png til svg

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <a class="logo pull-left" href="/">
                     {% block header_logo %}
-                    <img src="{% static "img/nabla_logo_white.png" %}" alt="Nabla">
+                    <img width="125" src="{% static "img/nabla_logo_white.svg" %}" alt="Nabla">
                     {% endblock header_logo %}
             </a>
 
