--- a/templates/base.html
+++ b/templates/base.html
@@ -204,7 +204,18 @@
 
                                 </ul>
                             </li>
-                            <li><a href="/contact/">Kontakt og varsling</a></li>
+
+
+                            <li class="dropdown">
+                                <a href="#Om" class="dropdown-toggle" data-toggle="dropdown">
+                                    Kontakt of varsling
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu" >
+                                    <li><a href="/contact/">Kontakt oss</a></li>
+                                    <li><a href="/varsling/">Varsling</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         {# end navigasjonslenker #}
                         <form class="form-inline" id="searchtop" method="get" action="{% url "haystack_search" %}">
