--- a/templates/base.html
+++ b/templates/base.html
@@ -208,7 +208,7 @@
 
                             <li class="dropdown">
                                 <a href="#Om" class="dropdown-toggle" data-toggle="dropdown">
-                                    Kontakt of varsling
+                                    Kontakt og varsling
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu" >
