Changes penalty in event to be stored as integer

--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -33,14 +33,14 @@
 <table id="attending_list" class="table">
     <tr>
         <th>Bruker</th>
-        {% for rule in rules %}
-        <th>{{ rule }}</th>
+        {% for case, penalty in event.get_penalty_rule_dict.items %}
+        <th>{{ case }} ({{ penalty }}p)</th>
         {% endfor %}
     </tr>
     {% for registration in registrations %}
     <tr>
         <td><label for="user_penalty_{{registration.pk}}">{{ registration.user.get_full_name }}</label></td>
-        {% for penalty in rules.values %}
+        {% for penalty in event.get_penalty_rule_dict.values %}
         <td><label style="width: 100%"><input type="radio" name="user_penalty_{{registration.pk}}" value="{{ penalty }}" {% ifequal registration.penalty penalty %}checked{% endifequal %}></label></td>
         {% endfor %}
     </tr>
