Sets up excahnge-frontpage, adds exchange news, and a temp. template

--- a/templates/base.html
+++ b/templates/base.html
@@ -199,7 +199,7 @@
                                     <li><a href="https://www.facebook.com/nablantnu/">Facebookside</a></li>
                                     <li><a href="http://bokskap.nabla.no/">Bokskap</a></li>
                                     <li><a href="{% url "wiki:root" %}">Internwiki</a></li>
-                                    <li><a href="{% url "ex_list" %}">Utveksling</a></li>
+                                    <li><a href="{% url "ex_frontpage" %}">Utveksling</a></li>
                                     <li><a href="https://nablantnu.slack.com">Nablaslack</a></li>
 
                                 </ul>
