Adds button on the page listing universities linking back to the exchange frontpage.
Also removes some unused, outcommented code.

--- a/nablapps/exchange/templates/exchange/ex_list.html
+++ b/nablapps/exchange/templates/exchange/ex_list.html
@@ -4,6 +4,7 @@
 
 <div class="container">
     <h2>Utveksling</h2>
+    <a href="{{ ex_frontpage_url }}"><button style="margin-bottom: 5px">Tilbake til forsiden for utveksling</button></a>
     <form method="GET" action="">
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
         <input type="submit" value="Søk"/>
