Adds link to news page to "diverse" in the top menu.

--- a/templates/base.html
+++ b/templates/base.html
@@ -196,6 +196,7 @@
                                 <ul class="dropdown-menu" >
 
                                     <li><a href="/nystudent/">For nye studenter</a></li>
+                                    <li><a href="https://nabla.no/nyheter">Nyhetsartikler</a></li>
                                     <li><a href="https://www.facebook.com/nablantnu/">Facebookside</a></li>
                                     <li><a href="http://bokskap.nabla.no/">Bokskap</a></li>
                                     <li><a href="{% url "wiki:root" %}">Internwiki</a></li>
