Make committees display in a grid-like manner.
Temporary state, want to have the possibility of recovering this state

--- a/nablapps/com/static/com/com.css
+++ b/nablapps/com/static/com/com.css
@@ -28,3 +28,16 @@
 .com-member .info {
     padding: 5px;
 }
+
+.com-tile{
+    width: 33%;
+}
+
+.com-link{
+    color: black;
+    text-align: center;
+}
+
+.headline{
+    text-align: center;
+}
