Changes default picture for interest groups

--- a/nablapps/com/templates/com/committee_overview.html
+++ b/nablapps/com/templates/com/committee_overview.html
@@ -47,7 +47,7 @@
                         {% if c.picture %}
                             src="{% thumbnail c.picture 250x250 crop="smart" %}"
                         {% else %}
-                            src="{% static "img/nabla_logo_black.png" 250x250 crop="smart" %}"
+                            src="{% static "img/nabla-black.svg" 250x250 crop="smart" %}"
                         {% endif %}>
                     {{ c.com.name }}</a>
                 </h2>
