Updates style of committee overview.
Now it should be more responsive and better for smaller screens.

--- a/nablapps/com/static/com/com.css
+++ b/nablapps/com/static/com/com.css
@@ -29,8 +29,13 @@
     padding: 5px;
 }
 
-.com-tile{
-    width: 33%;
+.grid-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem;
+}
+
+.grid-element{
     text-align: center;
 }
 
