--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}">
         <link href="{% static "css/default.css" %}" rel="stylesheet">
+        <!-- would like to add this in about.html, but cannot currently get it to work -->
+        <link href="{% static "css/about.css" %}" rel="stylesheet">
         {% endaddtoblock %}
         <!-- css-block -->
         {% render_block "css" %}
