Add a general element to the about navmenu.

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
         {% block navbar %}
             <h1 style="text-align: center">Om Nabla</h1>
             <ul class="nav-list">
-                <a><li>Undergrupper</li></a>
+                <a><li>Generelt om Nabla</li></a>
                 <a><li>Styret</li></a>
                 <a><li>Nablashop</li></a>
                 <a><li>Nablas lover</li></a>
