--- a/templates/base.html
+++ b/templates/base.html
@@ -169,27 +169,7 @@
                                     <li><a href="{% url "advent_calendar" "2018" %}">Julekalender 2018</a></li>
                                 </ul>
                             </li>
-
-                            <li class="dropdown">
-                                <a href="#om" class="dropdown-toggle" data-toggle="dropdown">
-                                    Om Nabla
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" >
-                                    <li><a href="{% url "committee_overview" %}" >Undergrupper</a></li>
-                                    <li><a href="{% url 'show_com_page' slug="styret"%}">Styret</a></li>
-                                    {# url for /nablashop/ #}
-                                    <li><a href="{% url 'nablashop:index' %}" >Nablashop</a></li>
-                                    <li><a href="{% url 'wiki:get' 'lovverk/nablas-lover/' %}">Nablas Lover</a></li>
-                                    <li><a href="{% url 'wiki:get' 'lovverk/nablas-forskrifter/' %}">Nablas Forskrifter</a></li>
-                                    {# Hent alle sider som starter på /om/ #}
-                                    {% get_flatpages '/om/' as about_pages %}
-                                    {% for page in about_pages %}
-                                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </li>
-
+                            <li><a href="{% url "om-nabla" %}">Om Nabla</a></li>
                             <li class="dropdown">
                                 <a href="#om" class="dropdown-toggle" data-toggle="dropdown">
                                     Diverse
