Adds some text to the general about page.
This should probably be changed so that the content comes from a flatpage instead.

Also adds some margin to the right of the menu.

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -10,6 +10,10 @@
     list-style: none;
 }
 
+.navbar-container{
+    margin-right: 10px;
+}
+
 .nav-list li{
     display: block;
     padding: 5px;
