Makes about page more responsive.

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -12,6 +12,7 @@
 
 .navbar-container{
     margin-right: 10px;
+    min-width: 150px;
 }
 
 .nav-list li{
@@ -28,4 +29,11 @@
 
 .nav-list li:hover{
     background-color: grey;
+}
+
+
+@media (max-width: 700px){
+    .main-grid-container{
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
+    }
 }
