Updates style of more-news-button.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -54,10 +54,12 @@
     .button{
         display: block;
         text-align: center;
+        line-height: 40px;
         border-radius: 5px;
         background-color: #f0f0f0;
         color: black;
         margin: 10px;
+        height: 40px;
     }
 
     .button:hover{
